src-tauri/error_ascii.txt
cargo :    Compiling accounti
ng-flow v0.1.0 (C:\Projects\A
ccountingFlow\src-tauri)
?? ?:1 ??:1
+ cargo check 2>&1 | Out-File
 -FilePath error_ascii.txt -E
ncoding ascii
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ac...Flow\src-taur   
 i):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
error[E0425]: cannot find val
ue `entertainment` in this sc
ope
   --> src\accounting\report_
engine.rs:198:8
    |
198 |     if entertainment > 
500_000.0 {
    |        ^^^^^^^^^^^^^ no
t found in this scope

warning: unused imports: `Com
plianceReview` and `Inventory
Batch`
 --> src\scm\scm_service.rs:1
:48
  |
1 | use crate::core::models::
{JournalEntry, Order, Complia
nceReview, InventoryItem, Inv
entoryBatch};
  |                          
                      ^^^^^^^
^^^^^^^^^                 ^^^
^^^^^^^^^^^
  |
  = note: `#[warn(unused_impo
rts)]` (part of `#[warn(unuse
d)]`) on by default

warning: value assigned to `b
ase_tax` is never read
   --> src\tax\tax_bridge.rs:
187:24
    |
187 |     let mut base_tax = 
0.0;
    |                        
^^^
    |
    = help: maybe it is overw
ritten before being read?
    = note: `#[warn(unused_as
signments)]` (part of `#[warn
(unused)]`) on by default

For more information about th
is error, try `rustc --explai
n E0425`.
warning: `accounting-flow` (l
ib) generated 2 warnings
error: could not compile `acc
ounting-flow` (lib) due to 1 
previous error; 2 warnings em
itted
